# FlexPipe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flexpipe.pc.in  install_dependencies.sh
cmake/: utils.cmake
cmake/dependency/: FlexPipe_Dependency.cmake  Flexpipe_Dependency.cmake  LibZMQ.cmake  RaftLib.cmake  Spdlog.cmake  boost.cmake  catch2.cmake  flexr_shm_queue.cmake  uvgRTP.cmake
examples/: .gitignore  1_local_pipeline.cc  1_local_pipeline.sh  2_local_shm_pipeline_sink.cc  2_local_shm_pipeline_source.cc  2_tcp_pipeline.cc  2_tcp_pipeline.sh  3_rtp_pipeline.cc  3_rtp_pipeline.sh  4_rtp_pipeline_non_blocking.cc  4_rtp_pipeline_non_blocking.sh  5_local_shm_pipeline.sh  5_local_shm_pipeline_sink.cc  5_local_shm_pipeline_source.cc  6_add_kernel.cc  6_add_kernel.sh  sample_kernels.h
flexpipe/: CMakeLists.txt  FlexPipe.h  deserialize_functions.h  frequency_manager.h  kernel.h  local_copy_functions.h  logger.h  message.h  port_interface.h  port_manager.h  rtp_port.h  serialize_functions.h  utils.h  zmq_port.h
source/: CMakeLists.txt  buildtest.cc  frequency_manager.cc  logger.cc  zmq_port.cc
